--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -93,7 +93,7 @@
                             <div class="card-group">
                                 {{#each news}}
                                     <div class="card card-block"><strong class="card-text">{{title}}</strong>
-                                        <p class="card-text">{{truncate content}}</p>
+                                        <p class="card-text">{{{truncate content}}}</p>
                                         <p class="card-text">
                                             <small class="text-muted">{{timeString}}</small>
                                         </p>
