507 improve ux of homeworks (#250)
* refactoring (part 1)

* refactoring (part 2)

* Refactoring (part 3)

Statistik CleanUp + Comments

* Refactoring (part 4)

sort algorithms

* tiny bugfix - remaining string color

* Date handling optimized

* pre calculate Math

* remove Color-Fallback, Permission checks in Detail view optimized

* Durchschnittsnotenberechnung in eigene Funktion

* renamed parts + comments

* transferred filtering to server

* fix handlebar helper syntax -> client is running again

* console.log removed

* minor changes (renaming)

* moved grade convertion from view to controller

* moved grade convertion from view to controller

* fix "not defined variables"

* var -> let & const (untested)

* isStudent Scope fix

* forgot this change at the previous commit

* ifvalue -> ifeqt

* ifeqT fix

* ifeqt -> ifvalue

caused too many bugs and I'm to lazy to fix all of them. So reverting
changes

* more moment.js integration

* removed console.log()

* duedate -> string with moment.js

* removed console.log

* refactoring

- github requested changes
- removed user images
- moved grade formatation from view to controller

* Symbole in Abgabenübersicht ändern

* Notenkonvertierung in Controller auslagern (Pull #222 required)

* delete Modal in detail-view of homework

* Fortschrittsgrafik auf Abgaben-Tab verlinken

* Tabs größer machen & mehr hervorheben

* Beschreibungen haben x-overflow & code change of tabs

* added margin to homework area -> gap between content & footer

* added client-sided pagination

* fixed url parameters for sorting results

* Kein Schüler in Kurs --> NAN & space-fix (design)

* alt Attribute in Übersicht

* alt-Attribute in Detailansicht

* pagination defined

* npm lint and whitespaces

* not ready - working later today on it

* Anmerkungen von Git eingearbeitet

* removed unused code

* fixed pits new homework sorting algorithm

--- a/static/styles/homework/homework.scss
+++ b/static/styles/homework/homework.scss
@@ -6,7 +6,22 @@
   .sort{
     float: left;
     margin: 10px 0 0;
-    min-width: 200px;
+    display: flex;
+    #sortselection_chosen{
+      min-width: 200px;
+      width: calc(100% - 30px) !important;
+      float: left;
+    }
+    #desc{
+      width: 30px;
+      padding: 0;
+      text-align:center;
+      border: none;
+      margin: 0;
+      background-color: white;
+      cursor: pointer;
+      cursor: hand;
+    }
   }
   .create {
     float: right;
@@ -118,6 +133,7 @@
         margin: 10px 0;
         min-height: 75px;
         color: grey;
+        word-break: break-all;
         @include media-breakpoint-down(xs) {
           margin-right: 25px;
         }
@@ -180,6 +196,9 @@
             font-size: 14px;
             color: #fff;
             background-color: #212121;
+            span{
+              display:block;
+            }
         }
         &:hover .textinfo{
           transition-delay: 0s,0s;
