--- a/views/homework/submissions.hbs
+++ b/views/homework/submissions.hbs
@@ -24,7 +24,7 @@
 				<td>
                     {{{submission.gradeText}}}
 					</td>
-				<td><i class="fa fa-pencil-square-o" aria-hidden="true"/></td>
+				<td><i class="fa fa-chevron-left" aria-hidden="true"/></td>
 			</tr>
 			<tr class="evaluation">
 				<td colSpan="6">{{>"homework/evaluation"}}</td>
