--- a/views/homework/feedback.hbs
+++ b/views/homework/feedback.hbs
@@ -1,40 +1,12 @@
 <section id="feedback" class="tab-content section-homeworkdetails">
     <div class="homework">
-        {{#if courseId.gradeSystem}}
-            {{#ifvalue submission.grade value=0 }}<b class="grade">Note: 6</b>{{/ifvalue}}
-            {{#if submission.grade}}
-				<b class="grade">Note: 
-				{{#ifvalue submission.grade value=0 }} 6{{/ifvalue}}
-				{{#ifvalue submission.grade value=1 }}5-{{/ifvalue}}
-				{{#ifvalue submission.grade value=2 }} 5{{/ifvalue}}
-				{{#ifvalue submission.grade value=3 }}5+{{/ifvalue}}
-				{{#ifvalue submission.grade value=4 }}4-{{/ifvalue}}
-				{{#ifvalue submission.grade value=5 }} 4{{/ifvalue}}
-				{{#ifvalue submission.grade value=6 }}4+{{/ifvalue}}
-				{{#ifvalue submission.grade value=7 }}3-{{/ifvalue}}
-				{{#ifvalue submission.grade value=8 }} 3{{/ifvalue}}
-				{{#ifvalue submission.grade value=9 }}3+{{/ifvalue}}
-				{{#ifvalue submission.grade value=10}}2-{{/ifvalue}}
-				{{#ifvalue submission.grade value=11}} 2{{/ifvalue}}
-				{{#ifvalue submission.grade value=12}}2+{{/ifvalue}}
-				{{#ifvalue submission.grade value=13}}1-{{/ifvalue}}
-				{{#ifvalue submission.grade value=14}} 1{{/ifvalue}}
-				{{#ifvalue submission.grade value=15}}1+{{/ifvalue}}
-				</b>
-			{{/if}}
-        {{else}}
-            {{#ifvalue submission.grade value=0}}
-                <b class="grade">0 Punkte</b>
-            {{/ifvalue}}
-			{{#if submission.grade}}
-				<b class="grade">{{submission.grade}} Punkte</b>
-			{{/if}}
-        {{/if}}
+        <b class="grade">{{{submission.gradeText}}}</b>
+
         <div class="comment">
             {{#if submission.gradeComment}}
                 {{{submission.gradeComment}}}
             {{else}}
-                <p>Kein Kommentar.</p>
+                <p>Kein Bewertungstext vorhanden.</p>
             {{/if}}
         </div>
     </div>
