--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -180,6 +180,7 @@
             color: $colorHPIRed;
             text-overflow: ellipsis;
             overflow:hidden;
+            cursor: pointer;
 
             &:hover {
                 box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
