add hover color for file actions

--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -200,7 +200,7 @@
                 margin-right: 15px;
                 color: #ccc;
                 &:hover {
-                    cursor: pointer;
+                    color: $colorHPIRed;
                 }
             }
             .title {
