--- a/views/partner/partner.hbs
+++ b/views/partner/partner.hbs
@@ -56,21 +56,21 @@
             <div class="row">
                 <div class="partner-box-wrapper col-xs-6 col-md-3">
                     <div class="partner-box">
-                        <a href="https://www.mint-ec.de/">
+                        <a href="http://www.antares.net/">
                             <img src="/images/partner/antares-logo.gif" alt="Logo Antares" class="img-fluid">
                         </a>
                     </div>
                 </div>
                 <div class="partner-box-wrapper col-xs-6 col-md-3">
                     <div class="partner-box">
-                        <a href="https://www.mint-ec.de/">
+                        <a href="http://de.bettermarks.com/">
                             <img src="/images/partner/bettermarks-logo.jpg" alt="Logo Bettermaks" class="img-fluid">
                         </a>
                     </div>
                 </div>
                 <div class="partner-box-wrapper col-xs-6 col-md-3">
                     <div class="partner-box">
-                        <a href="https://www.mint-ec.de/">
+                        <a href="https://www.deutsche-digitale-bibliothek.de/">
                             <img src="/images/partner/deutsche-digitale-bibliothek-logo.png" alt="Logo Deutsche Digitale Bibliothek" class="img-fluid" style="padding: 20px;">
                         </a>
                     </div>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="partner-box-wrapper col-xs-6 col-md-3">
                     <div class="partner-box">
-                        <a href="https://www.mint-ec.de/">
+                        <a href="https://de.serlo.org/">
                             <img src="/images/partner/serlo-logo.png" alt="Logo Serlo" class="img-fluid">
                         </a>
                     </div>
