Fix Antares Logo

--- a/views/partner/partner.hbs
+++ b/views/partner/partner.hbs
@@ -57,7 +57,7 @@
                 <div class="partner-box-wrapper col-xs-6 col-md-3">
                     <div class="partner-box">
                         <a href="http://www.antares.net/">
-                            <img src="/images/partner/antares-logo.gif" alt="Logo Antares" class="img-fluid">
+                            <img src="/images/partner/antares-logo.jpg" alt="Logo Antares" class="img-fluid">
                         </a>
                     </div>
                 </div>
