Added Cornelsen & Westermann

--- a/views/partner/partner.hbs
+++ b/views/partner/partner.hbs
@@ -36,15 +36,15 @@
                 </div>
                 <div class="partner-box-wrapper col-md-4">
                     <div class="partner-box">
-                        <a href="https://www.bmbf.de/">
-                            <img src="/images/partner/bmbf-logo.jpg" alt="Logo BMBF" class="img-fluid">
+                        <a href="https://www.mint-ec.de/">
+                            <img src="/images/partner/mintec-logo.jpg" alt="Logo MINT-EC" class="img-fluid">
                         </a>
                     </div>
                 </div>
                 <div class="partner-box-wrapper col-md-4">
                     <div class="partner-box">
-                        <a href="https://www.mint-ec.de/">
-                            <img src="/images/partner/mintec-logo.jpg" alt="Logo MINT-EC" class="img-fluid">
+                        <a href="https://www.bmbf.de/">
+                            <img src="/images/partner/bmbf-logo.jpg" alt="Logo BMBF" class="img-fluid">
                         </a>
                     </div>
                 </div>
@@ -70,6 +70,13 @@
                 </div>
                 <div class="partner-box-wrapper col-xs-6 col-md-3">
                     <div class="partner-box">
+                        <a href="https://www.cornelsen.de/home/">
+                            <img src="/images/partner/cornelsen-logo.png" alt="Logo Cornelsen" class="img-fluid" style="padding: 20px;">
+                        </a>
+                    </div>
+                </div>
+                <div class="partner-box-wrapper col-xs-6 col-md-3">
+                    <div class="partner-box">
                         <a href="https://www.deutsche-digitale-bibliothek.de/">
                             <img src="/images/partner/deutsche-digitale-bibliothek-logo.png" alt="Logo Deutsche Digitale Bibliothek" class="img-fluid" style="padding: 20px;">
                         </a>
@@ -86,6 +93,13 @@
                     <div class="partner-box">
                         <a href="https://de.serlo.org/">
                             <img src="/images/partner/serlo-logo.png" alt="Logo Serlo" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+                <div class="partner-box-wrapper col-xs-6 col-md-3">
+                    <div class="partner-box">
+                        <a href="https://verlage.westermanngruppe.de/westermann/">
+                            <img src="/images/partner/westermann-logo.png" alt="Logo Westermann" class="img-fluid" style="padding: 20px;">
                         </a>
                     </div>
                 </div>
