--- a/views/partner/partner.hbs
+++ b/views/partner/partner.hbs
@@ -103,6 +103,27 @@
                         </a>
                     </div>
                 </div>
+                <div class="partner-box-wrapper col-xs-6 col-md-3">
+                    <div class="partner-box">
+                        <a href="https://commons.wikimedia.org/wiki/Main_Page">
+                            <img src="/images/partner/wikimedia-commons-logo.png" alt="Logo Wikimedia Commons" class="img-fluid" style="padding: 20px;">
+                        </a>
+                    </div>
+                </div>
+                <div class="partner-box-wrapper col-xs-6 col-md-3">
+                    <div class="partner-box">
+                        <a href="https://www.wikipedia.de/">
+                            <img src="/images/partner/wikipedia-logo.png" alt="Logo Wikipedia" class="img-fluid" style="padding: 20px;">
+                        </a>
+                    </div>
+                </div>
+                <div class="partner-box-wrapper col-xs-6 col-md-3">
+                    <div class="partner-box">
+                        <a href="https://www.youtube.com/">
+                            <img src="/images/partner/youtube-logo.png" alt="Logo YouTube" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
