--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -1,5 +1,5 @@
 {{#content "styles" mode="append"}}
-    <link rel="stylesheet" href="/styles/homework/homework.css"/>
+    <link rel="stylesheet" href="/styles/homework/overview.css"/>
     <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
     <link rel="import" href="/vendor/m.e.i.n.e.l/circular-progress.html">
 {{/content}}
@@ -142,7 +142,7 @@
                                         {{this.name}}
                                     </h5>
                                     <div class="description">
-                                        {{{truncate this.description}}}
+                                        {{{this.description}}}
                                     </div>
                                 </a>
                                 {{#ifvalue this.teacherId value=this.currentUser._id}}
