--- a/static/styles/homework/overview.scss
+++ b/static/styles/homework/overview.scss
@@ -137,8 +137,14 @@
         @include media-breakpoint-down(xs) {
           margin-right: 25px;
         }
-        p {
-          margin-bottom:.25rem;
+        h1 {font-size: 1.3rem;font-weight:bold}
+        h2 {font-size: 1.2rem;font-weight:bold;font-style:italic}
+        h3 {font-size: 1.1rem;font-style:italic;text-decoration:underline}
+        p  {font-size: 1rem;margin-bottom:.25rem;}
+        blockquote{
+            margin-left: 1rem;
+            border-left: 2px solid grey;
+            padding-left: 5px;
         }
       }
       .dates {
