--- a/views/partner/partner.hbs
+++ b/views/partner/partner.hbs
@@ -2,6 +2,10 @@
 
     {{#content "styles" mode="append"}}
         <style>
+            .section-partner h5 {
+                color: #b10438;
+                margin-top: 20px;
+            }
             .partner-box-wrapper {
                 padding-top: 15px;
                 padding-bottom: 15px;
@@ -51,7 +55,27 @@
             </div>
         </div>
 
-        <h5>Lerninhalte</h5>
+        <h5>Lerninhalte Partner</h5>
+        <div class="container" style="margin-left: 0">
+            <div class="row">
+                <div class="partner-box-wrapper col-xs-6 col-md-3">
+                    <div class="partner-box">
+                        <a href="https://www.cornelsen.de/home/">
+                            <img src="/images/partner/cornelsen-logo.png" alt="Logo Cornelsen" class="img-fluid" style="padding: 20px;">
+                        </a>
+                    </div>
+                </div>
+                <div class="partner-box-wrapper col-xs-6 col-md-3">
+                    <div class="partner-box">
+                        <a href="https://verlage.westermanngruppe.de/westermann/">
+                            <img src="/images/partner/westermann-logo.png" alt="Logo Westermann" class="img-fluid" style="padding: 20px;">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <h5>Weitere Inhalte</h5>
         <div class="container" style="margin-left: 0">
             <div class="row">
                 <div class="partner-box-wrapper col-xs-6 col-md-3">
@@ -65,13 +89,6 @@
                     <div class="partner-box">
                         <a href="http://de.bettermarks.com/">
                             <img src="/images/partner/bettermarks-logo.jpg" alt="Logo Bettermaks" class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-                <div class="partner-box-wrapper col-xs-6 col-md-3">
-                    <div class="partner-box">
-                        <a href="https://www.cornelsen.de/home/">
-                            <img src="/images/partner/cornelsen-logo.png" alt="Logo Cornelsen" class="img-fluid" style="padding: 20px;">
                         </a>
                     </div>
                 </div>
@@ -98,13 +115,6 @@
                 </div>
                 <div class="partner-box-wrapper col-xs-6 col-md-3">
                     <div class="partner-box">
-                        <a href="https://verlage.westermanngruppe.de/westermann/">
-                            <img src="/images/partner/westermann-logo.png" alt="Logo Westermann" class="img-fluid" style="padding: 20px;">
-                        </a>
-                    </div>
-                </div>
-                <div class="partner-box-wrapper col-xs-6 col-md-3">
-                    <div class="partner-box">
                         <a href="https://commons.wikimedia.org/wiki/Main_Page">
                             <img src="/images/partner/wikimedia-commons-logo.png" alt="Logo Wikimedia Commons" class="img-fluid" style="padding: 20px;">
                         </a>
@@ -126,6 +136,7 @@
                 </div>
             </div>
         </div>
+
     </section>
     {{/content}}
 
