--- a/views/partner/partner.hbs
+++ b/views/partner/partner.hbs
@@ -101,7 +101,7 @@
                 </div>
                 <div class="partner-box-wrapper col-xs-6 col-md-3">
                     <div class="partner-box">
-                        <a href="https://www.mint-ec.de/">
+                        <a href="https://de.khanacademy.org/">
                             <img src="/images/partner/khanacademy-logo.png" alt="Logo Khan Academy" class="img-fluid">
                         </a>
                     </div>
