Added meinUnterricht & Intro Text

--- a/views/partner/partner.hbs
+++ b/views/partner/partner.hbs
@@ -6,6 +6,9 @@
                 color: #b10438;
                 margin-top: 20px;
             }
+            .section-partner .container {
+                margin-left: 0;
+            }
             .partner-box-wrapper {
                 padding-top: 15px;
                 padding-bottom: 15px;
@@ -28,8 +31,22 @@
     {{#content "page"}}
     <section class="section-partner">
 
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12" style="padding: 0">
+                    <p>
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+                        dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
+                        sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+                    </p>
+                </div>
+            </div>
+        </div>
+
+
         <h5>Projektdurchführung</h5>
-        <div class="container" style="margin-left: 0">
+        <div class="container">
             <div class="row">
                 <div class="partner-box-wrapper col-md-4">
                     <div class="partner-box">
@@ -56,7 +73,7 @@
         </div>
 
         <h5>Lerninhalte Partner</h5>
-        <div class="container" style="margin-left: 0">
+        <div class="container">
             <div class="row">
                 <div class="partner-box-wrapper col-xs-6 col-md-3">
                     <div class="partner-box">
@@ -76,7 +93,7 @@
         </div>
 
         <h5>Weitere Inhalte</h5>
-        <div class="container" style="margin-left: 0">
+        <div class="container">
             <div class="row">
                 <div class="partner-box-wrapper col-xs-6 col-md-3">
                     <div class="partner-box">
@@ -103,6 +120,13 @@
                     <div class="partner-box">
                         <a href="https://de.khanacademy.org/">
                             <img src="/images/partner/khanacademy-logo.png" alt="Logo Khan Academy" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+                <div class="partner-box-wrapper col-xs-6 col-md-3">
+                    <div class="partner-box">
+                        <a href="https://www.meinunterricht.de/">
+                            <img src="/images/partner/meinunterricht-logo.png" alt="Logo MeinUnterricht" class="img-fluid" style="padding: 20px;">
                         </a>
                     </div>
                 </div>
