Added Intro Text & Sponsors

--- a/views/partner/partner.hbs
+++ b/views/partner/partner.hbs
@@ -35,10 +35,11 @@
             <div class="row">
                 <div class="col-sm-12" style="padding: 0">
                     <p>
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-                        dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
-                        sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+                        Sie möchten die Schul-Cloud unterstützen? Das freut uns. Wenn Sie interessante Lern- und Lehrinhalte
+                        haben wenden Sie sich bitte an <a href="mailto:inhalte@schul-cloud.org">inhalte@schul-cloud.org</a>.
+                        Sonstige Anfragen und Angebote gerne unter <a href="mailto:schul-cloud@hpi.de">schul-cloud@hpi.de</a>.
+                        Wer beim Entwickeln und Programmieren mithelfen möchte findet unter
+                        <a href="https://schul-cloud.github.io">https://schul-cloud.github.io</a>  mehr Informationen.
                     </p>
                 </div>
             </div>
@@ -155,6 +156,26 @@
                     <div class="partner-box">
                         <a href="https://www.youtube.com/">
                             <img src="/images/partner/youtube-logo.png" alt="Logo YouTube" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <h5>Sponsoren</h5>
+        <div class="container">
+            <div class="row">
+                <div class="partner-box-wrapper col-xs-6 col-md-3">
+                    <div class="partner-box">
+                        <a href="http://aeroaccess.de/index.php">
+                            <img src="/images/partner/aeroaccess-logo.gif" alt="Logo aeroaccess" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+                <div class="partner-box-wrapper col-xs-6 col-md-3">
+                    <div class="partner-box">
+                        <a href="https://www.telekom.de/start">
+                            <img src="/images/partner/telekom-logo.png" alt="Logo Telekom" class="img-fluid" style="padding: 20px;">
                         </a>
                     </div>
                 </div>
