--- a/views/partner/partner.hbs
+++ b/views/partner/partner.hbs
@@ -73,27 +73,7 @@
             </div>
         </div>
 
-        <h5>Lerninhalte Partner</h5>
-        <div class="container">
-            <div class="row">
-                <div class="partner-box-wrapper col-xs-6 col-md-3">
-                    <div class="partner-box">
-                        <a href="https://www.cornelsen.de/home/">
-                            <img src="/images/partner/cornelsen-logo.png" alt="Logo Cornelsen" class="img-fluid" style="padding: 20px;">
-                        </a>
-                    </div>
-                </div>
-                <div class="partner-box-wrapper col-xs-6 col-md-3">
-                    <div class="partner-box">
-                        <a href="https://verlage.westermanngruppe.de/westermann/">
-                            <img src="/images/partner/westermann-logo.png" alt="Logo Westermann" class="img-fluid" style="padding: 20px;">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <h5>Weitere Inhalte</h5>
+        <h5>Pilotpartner Lerninhalte</h5>
         <div class="container">
             <div class="row">
                 <div class="partner-box-wrapper col-xs-6 col-md-3">
@@ -107,6 +87,13 @@
                     <div class="partner-box">
                         <a href="http://de.bettermarks.com/">
                             <img src="/images/partner/bettermarks-logo.jpg" alt="Logo Bettermaks" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+                <div class="partner-box-wrapper col-xs-6 col-md-3">
+                    <div class="partner-box">
+                        <a href="https://www.cornelsen.de/home/">
+                            <img src="/images/partner/cornelsen-logo.png" alt="Logo Cornelsen" class="img-fluid" style="padding: 20px;">
                         </a>
                     </div>
                 </div>
@@ -135,6 +122,13 @@
                     <div class="partner-box">
                         <a href="https://de.serlo.org/">
                             <img src="/images/partner/serlo-logo.png" alt="Logo Serlo" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+                <div class="partner-box-wrapper col-xs-6 col-md-3">
+                    <div class="partner-box">
+                        <a href="https://verlage.westermanngruppe.de/westermann/">
+                            <img src="/images/partner/westermann-logo.png" alt="Logo Westermann" class="img-fluid" style="padding: 20px;">
                         </a>
                     </div>
                 </div>
