[ci skip] WIP create topic share link

--- a/views/topic/edit-topic.hbs
+++ b/views/topic/edit-topic.hbs
@@ -5,7 +5,7 @@
         <script src="/vendor/react/react-dom.min.js" defer></script>
         <script src="/vendor/react/react-sortable-hoc.js" defer></script>
         <script src="/vendor/ckeditor/ckeditor.js" defer></script>
-        <script src="/scripts/topic.js" defer></script>
+        <script src="/scripts/topicEdit.js" defer></script>
         <script src="/scripts/courses.js" defer></script>
     {{/content}}
 
