--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -72,7 +72,7 @@
                                 <i class="fa fa-plus" aria-hidden="true"></i>
                                 Thema hinzufügen
                             </a>
-                            <a href="#" data-courseId="{{../id}}" class="btn btn-secondary margin-top btn-import-topic">
+                            <a href="#" data-courseId="{{../_id}}" class="btn btn-secondary margin-top btn-import-topic">
                                 <i class="fa fa-exchange" aria-hidden="true"></i>
                                 Thema importieren
                             </a>
