--- a/views/partner/partner.hbs
+++ b/views/partner/partner.hbs
@@ -45,134 +45,51 @@
             </div>
         </div>
 
-
         <h5>Projektdurchführung</h5>
         <div class="container">
             <div class="row">
-                <div class="partner-box-wrapper col-md-4">
-                    <div class="partner-box">
-                        <a href="https://hpi.de">
-                            <img src="/images/partner/hpi-logo.jpg" alt="Logo HPI" class="img-fluid" style="padding: 20px;">
-                        </a>
+                {{#each partners.project_partners}}
+                    <div class="partner-box-wrapper col-md-4">
+                        <div class="partner-box">
+                            <a href="{{{url}}}">
+                                <img src="/images/partner/{{{logo}}}" alt="Logo {{{name}}}" class="img-fluid"
+                                    {{#if padding}} style="padding: {{{padding}}}" {{/if}}>
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="partner-box-wrapper col-md-4">
-                    <div class="partner-box">
-                        <a href="https://www.mint-ec.de/">
-                            <img src="/images/partner/mintec-logo.jpg" alt="Logo MINT-EC" class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-                <div class="partner-box-wrapper col-md-4">
-                    <div class="partner-box">
-                        <a href="https://www.bmbf.de/">
-                            <img src="/images/partner/bmbf-logo.jpg" alt="Logo BMBF" class="img-fluid">
-                        </a>
-                    </div>
-                </div>
+                {{/each}}
             </div>
         </div>
 
         <h5>Pilotpartner Lerninhalte</h5>
         <div class="container">
             <div class="row">
+                {{#each partners.content_partners}}
                 <div class="partner-box-wrapper col-xs-6 col-md-3">
                     <div class="partner-box">
-                        <a href="http://www.antares.net/">
-                            <img src="/images/partner/antares-logo.jpg" alt="Logo Antares" class="img-fluid">
+                        <a href="{{{url}}}">
+                            <img src="/images/partner/{{{logo}}}" alt="Logo {{{name}}}" class="img-fluid"
+                                {{#if padding}} style="padding: {{{padding}}}" {{/if}}>
                         </a>
                     </div>
                 </div>
-                <div class="partner-box-wrapper col-xs-6 col-md-3">
-                    <div class="partner-box">
-                        <a href="http://de.bettermarks.com/">
-                            <img src="/images/partner/bettermarks-logo.jpg" alt="Logo Bettermaks" class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-                <div class="partner-box-wrapper col-xs-6 col-md-3">
-                    <div class="partner-box">
-                        <a href="https://www.cornelsen.de/home/">
-                            <img src="/images/partner/cornelsen-logo.png" alt="Logo Cornelsen" class="img-fluid" style="padding: 20px;">
-                        </a>
-                    </div>
-                </div>
-                <div class="partner-box-wrapper col-xs-6 col-md-3">
-                    <div class="partner-box">
-                        <a href="https://www.deutsche-digitale-bibliothek.de/">
-                            <img src="/images/partner/deutsche-digitale-bibliothek-logo.png" alt="Logo Deutsche Digitale Bibliothek" class="img-fluid" style="padding: 20px;">
-                        </a>
-                    </div>
-                </div>
-                <div class="partner-box-wrapper col-xs-6 col-md-3">
-                    <div class="partner-box">
-                        <a href="https://de.khanacademy.org/">
-                            <img src="/images/partner/khanacademy-logo.png" alt="Logo Khan Academy" class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-                <div class="partner-box-wrapper col-xs-6 col-md-3">
-                    <div class="partner-box">
-                        <a href="https://www.meinunterricht.de/">
-                            <img src="/images/partner/meinunterricht-logo.png" alt="Logo MeinUnterricht" class="img-fluid" style="padding: 20px;">
-                        </a>
-                    </div>
-                </div>
-                <div class="partner-box-wrapper col-xs-6 col-md-3">
-                    <div class="partner-box">
-                        <a href="https://de.serlo.org/">
-                            <img src="/images/partner/serlo-logo.png" alt="Logo Serlo" class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-                <div class="partner-box-wrapper col-xs-6 col-md-3">
-                    <div class="partner-box">
-                        <a href="https://verlage.westermanngruppe.de/westermann/">
-                            <img src="/images/partner/westermann-logo.png" alt="Logo Westermann" class="img-fluid" style="padding: 20px;">
-                        </a>
-                    </div>
-                </div>
-                <div class="partner-box-wrapper col-xs-6 col-md-3">
-                    <div class="partner-box">
-                        <a href="https://commons.wikimedia.org/wiki/Main_Page">
-                            <img src="/images/partner/wikimedia-commons-logo.png" alt="Logo Wikimedia Commons" class="img-fluid" style="padding: 20px;">
-                        </a>
-                    </div>
-                </div>
-                <div class="partner-box-wrapper col-xs-6 col-md-3">
-                    <div class="partner-box">
-                        <a href="https://www.wikipedia.de/">
-                            <img src="/images/partner/wikipedia-logo.png" alt="Logo Wikipedia" class="img-fluid" style="padding: 20px;">
-                        </a>
-                    </div>
-                </div>
-                <div class="partner-box-wrapper col-xs-6 col-md-3">
-                    <div class="partner-box">
-                        <a href="https://www.youtube.com/">
-                            <img src="/images/partner/youtube-logo.png" alt="Logo YouTube" class="img-fluid">
-                        </a>
-                    </div>
-                </div>
+                {{/each}}
             </div>
         </div>
 
         <h5>Sponsoren</h5>
         <div class="container">
             <div class="row">
+                {{#each partners.sponsors}}
                 <div class="partner-box-wrapper col-xs-6 col-md-3">
                     <div class="partner-box">
-                        <a href="http://aeroaccess.de/index.php">
-                            <img src="/images/partner/aeroaccess-logo.gif" alt="Logo aeroaccess" class="img-fluid">
+                        <a href="{{{url}}}">
+                            <img src="/images/partner/{{{logo}}}" alt="Logo {{{name}}}" class="img-fluid"
+                                {{#if padding}} style="padding: {{{padding}}}" {{/if}}>
                         </a>
                     </div>
                 </div>
-                <div class="partner-box-wrapper col-xs-6 col-md-3">
-                    <div class="partner-box">
-                        <a href="https://www.telekom.de/start">
-                            <img src="/images/partner/telekom-logo.png" alt="Logo Telekom" class="img-fluid" style="padding: 20px;">
-                        </a>
-                    </div>
-                </div>
+                {{/each}}
             </div>
         </div>
 
