--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -79,6 +79,15 @@
                     {{/if}}
 
                     <ul class="nav navbar-nav float-xs-right">
+                        <li class="nav-item qr-code-action">
+                            <div class="dropdown">
+                                <a class="btn btn-secondary btn-thin btn-create-qr dropdown-toggle" data-toggle="dropdown">
+                                    <i class="fa fa-qrcode"></i>
+                                </a>
+                                <div class="dropdown-menu qr-show">
+                                </div>
+                            </div>
+                        </li>
                         <li class="nav-item notification-dropdown">
                             <div class="dropdown show">
                                 <a class="btn btn-secondary btn-thin dropdown-toggle notification-dropdown-toggle {{#if recentNotifications}}recent{{/if}}" data-toggle="dropdown">
