minimal improvements in topics, delete topics functionality

--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -32,12 +32,22 @@
                                             <div class="input-group">
                                                 {{#userHasPermission "COURSE_EDIT"}}
                                                     <span class="input-group-btn">
-                                                        <a class="btn btn-secondary btn-hidden-toggle" href="{{../_id}}" data-toggle="tooltip" title="Thema sperren">
+                                                        <a class="btn btn-secondary btn-hidden-toggle" href="{{../_id}}" data-toggle="tooltip" title="Thema verstecken">
                                                              <i class="fa fa-eye"></i>
                                                         </a>
                                                     </span>
                                                 {{/userHasPermission}}
                                                 <p class="topic-label">{{this.name}}</p>
+                                                {{#userHasPermission "COURSE_EDIT"}}
+                                                    <a class="delete-topic"
+                                                       href="/courses/{{../courseId}}/topics/{{../_id}}"
+                                                       target="_blank"
+                                                       data-method="delete-material"
+                                                       data-name="{{../name}}"
+                                                        redirect="/courses/{{../courseId}}">
+                                                        <i class="fa fa-trash-o"></i>
+                                                    </a>
+                                                {{/userHasPermission}}
                                             </div>
                                         </div>
                                     </div>
@@ -51,11 +61,19 @@
                                                                 class="btn btn-secondary btn-hidden-toggle"
                                                                 href="{{../_id}}"
                                                                 data-toggle="tooltip"
-                                                                title="{{#if ../hidden}}Thema entsperren{{else}}Thema sperren{{/if}}">
+                                                                title="{{#if ../hidden}}Thema sichtbar machen{{else}}Thema verstecken{{/if}}">
                                                                  <i class="fa fa-eye{{#if ../hidden}}-slash{{/if}}"></i>
                                                             </a>
                                                         </span>
                                                     <p class="topic-label">{{../name}}</p>
+                                                    <a class="delete-topic"
+                                                       href="/courses/{{../courseId}}/topics/{{../_id}}"
+                                                       target="_blank"
+                                                       data-method="delete-material"
+                                                       data-name="{{../name}}"
+                                                       redirect="/courses/{{../courseId}}">
+                                                        <i class="fa fa-trash-o"></i>
+                                                    </a>
                                                 </div>
                                             </div>
                                         </div>
