--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -33,13 +33,18 @@
     .card-topic {
         cursor: pointer;
         .btn-hidden-toggle {
+            font-size: 20px;
         }
         .topic-label {
             margin-bottom: 0;
-            line-height: 35px;
+            line-height: 50px;
+            padding-right: 20px;
+        }
+        .delete-topic {
+            line-height: 50px;
         }
         .input-group-btn {
-            padding-right: 100px;
+            padding-right: 50px;
             float: right;
         }
     }
