--- a/views/template/registration.hbs
+++ b/views/template/registration.hbs
@@ -62,6 +62,8 @@
                             <a href="https://hpi.de/impressum.html" target="blank">Impressum</a>
                             <span> - </span>
                             <a href="mailto:hpi-info@hpi.de?subject=Schul_Cloud%20Anfrage">Kontakt</a>
+                            <span> - </span>
+                            <a href="https://schul-cloud.org/partner">Partner</a>
                         </nobr>
                     </div>
                 </div>
