--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -9,6 +9,8 @@
                 <a href="https://hpi.de/impressum.html" target="blank">Impressum</a>
                 <span> - </span>
                 <a href="mailto:hpi-info@hpi.de?subject=Schul_Cloud%20Anfrage">Kontakt</a>
+                <span> - </span>
+                <a href="/partner">Partner</a>
             </nobr>
         </div>
     </div>
