--- a/views/lib/header.hbs
+++ b/views/lib/header.hbs
@@ -16,6 +16,9 @@
                     <a class="nav-link" href="https://hpi.de/open-campus/hpi-initiativen/schulcloud"
                        target="_blank">über Schul-Cloud</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/partner">Partner</a>
+                </li>
             </ul>
         </nav>
     </div>
