--- a/views/partner/partner.hbs
+++ b/views/partner/partner.hbs
@@ -8,7 +8,7 @@
                     haben wenden Sie sich bitte an <a href="mailto:inhalte@schul-cloud.org">inhalte@schul-cloud.org</a>.
                     Sonstige Anfragen und Angebote gerne unter <a href="mailto:schul-cloud@hpi.de">schul-cloud@hpi.de</a>.
                     Wer beim Entwickeln und Programmieren mithelfen möchte findet unter
-                    <a href="https://schul-cloud.github.io">https://schul-cloud.github.io</a>  mehr Informationen.
+                    <a href="https://schul-cloud.github.io" target="_blank">https://schul-cloud.github.io</a>  mehr Informationen.
                 </p>
             </div>
         </div>
@@ -20,7 +20,7 @@
             {{#each partners.project_partners}}
             <div class="partner-box-wrapper col-md-4">
                 <div class="partner-box">
-                    <a href="{{{url}}}">
+                    <a href="{{{url}}}" target="_blank">
                         <img src="{{{../logo_prefix}}}{{{logo}}}" alt="Logo {{{name}}}" class="img-fluid"
                             {{#if padding}} style="padding: {{{padding}}};" {{/if}}>
                     </a>
@@ -36,7 +36,7 @@
             {{#each partners.content_partners}}
             <div class="partner-box-wrapper col-xs-6 col-md-3">
                 <div class="partner-box">
-                    <a href="{{{url}}}">
+                    <a href="{{{url}}}" target="_blank">
                         <img src="{{{../logo_prefix}}}{{{logo}}}" alt="Logo {{{name}}}" class="img-fluid"
                             {{#if padding}} style="padding: {{{padding}}};" {{/if}}>
                     </a>
@@ -52,7 +52,7 @@
             {{#each partners.sponsors}}
             <div class="partner-box-wrapper col-xs-6 col-md-3">
                 <div class="partner-box">
-                    <a href="{{{url}}}">
+                    <a href="{{{url}}}" target="_blank">
                         <img src="{{{../logo_prefix}}}{{{logo}}}" alt="Logo {{{name}}}" class="img-fluid"
                             {{#if padding}} style="padding: {{{padding}}};" {{/if}}>
                     </a>
@@ -71,7 +71,7 @@
                     Vertreter/innen der Bildungspraxis, Wirtschaft und Politik zusammensetzt. Im Fokus stehen neben
                     technischen Aspekten, auch Themen wie Datenschutz und Pädagogik. Die Ergebnisse der letzten
                     Fachbeirats-Sitzung können Sie in unserem
-                    <a href="https://blog.schul-cloud.org/einblicke-in-die-arbeit-des-fachbeirats/">Blog</a> nachlesen.
+                    <a href="https://blog.schul-cloud.org/einblicke-in-die-arbeit-des-fachbeirats/" target="_blank">Blog</a> nachlesen.
                 </p>
             </div>
         </div>
@@ -79,7 +79,7 @@
             <ul>
                 {{#each partners.advisers}}
                 <li>
-                    <a href="{{{url}}}">{{{name}}}</a>
+                    <a href="{{{url}}}" target="_blank">{{{name}}}</a>
                 </li>
                 {{/each}}
             </ul>
