--- a/views/partner/partner_guests.hbs
+++ b/views/partner/partner_guests.hbs
@@ -2,6 +2,14 @@
 
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/partner/partner.css"/>
+        <style>
+            body {
+                background: #e6e2e2;
+            }
+            .partner-box {
+                background: white;
+            }
+        </style>
     {{/content}}
 
     {{#content "body"}}
