homeworkstyles to a single file ->unique design everywhere

--- a/static/styles/dashboard/dashboard.scss
+++ b/static/styles/dashboard/dashboard.scss
@@ -1,5 +1,6 @@
 @import '../lib/colors.scss';
 @import '../lib/bootstrap/scss/bootstrap-flex';
+@import '../homework/homework.scss';
 
 @include media-breakpoint-down(xs) {
     .row.lesson-cards,
