--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -137,7 +137,7 @@
                                 <a class="content" href="{{this.url}}" alt="Details der Aufgabe: '{{this.name}}'"> 
                                     <h5 class="title">
                                         {{#if this.courseId}}
-                                            <span>{{this.courseId.name}}</span>
+                                            [<span>{{this.courseId.name}}</span>] - 
                                         {{/if}}
                                         {{this.name}}
                                     </h5>
