--- a/static/styles/homework/overview.scss
+++ b/static/styles/homework/overview.scss
@@ -1,5 +1,6 @@
 ﻿@import '../lib/colors.scss';
 @import '../lib/bootstrap/scss/bootstrap-flex';
+@import 'homework.scss';
 
 .route-homework {
   position: relative;
@@ -46,7 +47,6 @@
       bottom: 5vw;
       right: 5vw;
       box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-
       i {
         display: initial;
       }
@@ -101,13 +101,6 @@
     margin: 0;
     padding: 10px 0;
     clear: both;
-    a {
-      color: #373a3c;
-      &:hover {
-        text-decoration: none;
-        color: #373a3c;
-      }
-    }
     .assignment {
       width: 100%;
       position: relative;
@@ -121,31 +114,6 @@
       h5 {
         margin: 0;
         color: $colorHPIRed;
-        span:before {
-          content: "[";
-        }
-        span:after {
-          content: "] - ";
-        }
-      }
-      .description {
-        /* margin: 10px 75px 10px 0; */
-        margin: 10px 0;
-        min-height: 75px;
-        color: grey;
-        word-break: break-all;
-        @include media-breakpoint-down(xs) {
-          margin-right: 25px;
-        }
-        h1 {font-size: 1.3rem;font-weight:bold}
-        h2 {font-size: 1.2rem;font-weight:bold;font-style:italic}
-        h3 {font-size: 1.1rem;font-style:italic;text-decoration:underline}
-        p  {font-size: 1rem;margin-bottom:.25rem;}
-        blockquote{
-            margin-left: 1rem;
-            border-left: 2px solid grey;
-            padding-left: 5px;
-        }
       }
       .dates {
         float: right;
@@ -187,7 +155,6 @@
         .red {
           color: red;
         }
-        
         .textinfo{
             transition: visibility 0s linear .3s,opacity .3s linear 0s;
             opacity: 0;
